--- a/index.html
+++ b/index.html
@@ -200,7 +200,7 @@
                 <button type="submit">ENVIAR</button>
 
                 <input type="hidden" name="_autoresponse" value="Recebemos sua mensagem, retornaremos em breve!">
-                <input type="hidden" name="_next" value="http://127.0.0.1:5500/thankyou.html">
+                <input type="hidden" name="_next" value="https://daviteixeirarj.github.io/lm_fluminense/thankyou.html">
             </form>
         </div>
 
