--- a/index.html
+++ b/index.html
@@ -161,7 +161,7 @@
                     <img src="img/servicos/9 porteiro.jpg" alt="">
                 </div>
                 <div class="img">
-                    <h3>Auxialres Administrativos</h3>
+                    <h3>Auxiliares Administrativos</h3>
                     <img src="img/servicos/10 aux adm.jpg" alt="">
                 </div>
                 <div class="img">
