fix whatsapp link

--- a/index.html
+++ b/index.html
@@ -220,7 +220,7 @@
         </div>
     </footer>
 
-    <a href="https://web.whatsapp.com/send?phone=5521986821024" target="_blank">
+    <a href="https://wa.me/5521986821024" target="_blank">
         <img src="img/wpp.PNG" alt="" id="wppico">
     </a>
 </body>
